Verification for Hybrid node pool/Case-2-Deny-all-ingress-to-selected-pods/Testpods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: lin-frontend-testpod
  namespace: development
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    image: busybox:1.28
    imagePullPolicy: Always
    name: lin-frontend-testpod
  nodeSelector:
    kubernetes.io/os: linux
---
apiVersion: v1
kind: Pod
metadata:
  name: win-frontend-testpod
  namespace: development
  labels:
    app: frontend
spec:
  containers:
    - name: win-frontend-testpod
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - "Start-Sleep 360000"
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: testapp
  name: lin-testapp
  namespace: default
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    image: busybox:1.28
    imagePullPolicy: Always
    name: lin-testapp
  nodeSelector:
    kubernetes.io/os: linux
---
apiVersion: v1
kind: Pod
metadata:
  name: win-testapp
  namespace: default
  labels:
    app: testapp
spec:
  containers:
    - name: win-testapp
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - "Start-Sleep 360000"
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
