Verification for Hybrid node pool/Case-2-Deny-all-ingress-to-selected-pods/Networkpolicy.yaml
# This Network policy file denies all ingress connections to pods with app=backend in development namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-ingress
  namespace: development
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: backend
  ingress: []
